unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account related to this Subscription.</description>
    <inlineHelpText>The Account related to this Subscription.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>