unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Amount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_Threshold__c</fullName>
    <description>Monetary threshold that triggers the subscription to advance to a new billing period.</description>
    <inlineHelpText>Monetary threshold that triggers the subscription to advance to a new billing period.</inlineHelpText>
    <label>Amount Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>