unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Backdate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Backdate_Start_Date__c</fullName>
    <description>To set a start date for a date in the past, set this field when creating a new subscription</description>
    <inlineHelpText>To set a start date for a date in the past, set this field when creating a new subscription</inlineHelpText>
    <label>Backdate Start Date</label>
    <type>DateTime</type>
</CustomField>