unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Method__c</fullName>
    <description>When charging automatically, Stripe will attempt to pay this subscription at the end of the cycle using the default source attached to the customer. When sending an invoice, Stripe will email your customer an invoice with payment instructions.</description>
    <inlineHelpText>When charging automatically, Stripe will attempt to pay this subscription at the end of the cycle using the default source attached to the customer. When sending an invoice, Stripe will email your customer an invoice with payment instructions.</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>charge_automatically</fullName>
                <label>Charge Automatically</label>
            </value>
            <value>
                <fullName>send_invoice</fullName>
                <label>Send Invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>