unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Contact__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact related to this Subscription.</description>
    <inlineHelpText>The Contact related to this Subscription.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>