unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Coupon__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>bt_stripe__Coupon2__c.bt_stripe__Deleted_From_Stripe__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>bt_stripe__Coupon2__c.bt_stripe__Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bt_stripe__Coupon2__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>