unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Customer__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Customer related to this Subscription. Customer is the Payment Gateway&#39;s Customer entity.</description>
    <inlineHelpText>The Customer related to this Subscription. Customer is the Payment Gateway&#39;s Customer entity.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>bt_stripe__Stripe_Customer__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>