unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Enable_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Payment_Method__c</fullName>
    <description>The list of payment method types (e.g. card) to provide to the invoice’s PaymentIntent.</description>
    <inlineHelpText>The list of payment method types (e.g. card) to provide to the invoice’s PaymentIntent.</inlineHelpText>
    <label>Enable Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH bank transfer</fullName>
                <label>ACH Credit (pushed by them)</label>
            </value>
            <value>
                <fullName>ACH</fullName>
                <label>ACH Debit (pulled by you)</label>
            </value>
            <value>
                <fullName>Canadian pre-authorized debit</fullName>
            </value>
            <value>
                <fullName>BECS Direct Debit</fullName>
            </value>
            <value>
                <fullName>Bacs Direct Debit</fullName>
            </value>
            <value>
                <fullName>Bancontact</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>fpx</fullName>
                <label>FPX</label>
            </value>
            <value>
                <fullName>giropay</fullName>
            </value>
            <value>
                <fullName>iDEAL</fullName>
            </value>
            <value>
                <fullName>Przelewy24</fullName>
            </value>
            <value>
                <fullName>SEPA Direct Debit</fullName>
            </value>
            <value>
                <fullName>SOFORT</fullName>
            </value>
            <value>
                <fullName>Wechat Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>