unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Iterations__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Iterations__c</fullName>
    <inlineHelpText>Integer representing the multiplier applied to the price interval. Set to a value in Subscription Schedule Phase</inlineHelpText>
    <label>Iterations</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>