unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Last_Finalized_ARR__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Last_Finalized_ARR__c</fullName>
    <description>The total amount of finalized or Paid annually recurring subscription invoices.</description>
    <inlineHelpText>The total amount of finalized or Paid annually recurring subscription invoices.</inlineHelpText>
    <label>Last Finalized ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>