unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Last_Finalized_Sum_All_ARR__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Last_Finalized_Sum_All_ARR__c</fullName>
    <description>Sum of MRR+QRR+ARR revenue.</description>
    <inlineHelpText>Sum of MRR+QRR+ARR revenue.</inlineHelpText>
    <label>Last Finalized Sum of All as ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>