unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Paused__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-checked when the subscription collection is paused.</description>
    <inlineHelpText>Auto-checked when the subscription collection is paused.</inlineHelpText>
    <label>Paused?</label>
    <type>Checkbox</type>
</CustomField>