unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Paused_Invoice_Behavior__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Paused_Invoice_Behavior__c</fullName>
    <description>The payment collection behavior for this subscription while paused.</description>
    <inlineHelpText>The payment collection behavior for this subscription while paused.</inlineHelpText>
    <label>Paused Invoice Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>keep_as_draft</fullName>
                <label>Keep As Draft</label>
            </value>
            <value>
                <fullName>mark_uncollectible</fullName>
                <label>Mark Uncollectible</label>
            </value>
            <value>
                <fullName>void</fullName>
                <label>Void</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>