unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Method for the Subscription. It must belong to the Customer associated with the Subscription and be in a chargeable state. If not set, defaults to the Customer&#39;s default Payment Method.</description>
    <inlineHelpText>The Payment Method for the Subscription. It must belong to the Customer associated with the Subscription and be in a chargeable state. If not set, defaults to the Customer&#39;s default Payment Method.</inlineHelpText>
    <label>Payment Method</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>You can choose only the Customer&#39;s Payment Method.</errorMessage>
        <filterItems>
            <field>bt_stripe__Payment_Method__c.bt_stripe__Stripe_Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.bt_stripe__Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bt_stripe__Payment_Method__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>