unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Pending_Invoice_Item_Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Pending_Invoice_Item_Interval_Count__c</fullName>
    <description>The number of intervals between invoices. Works with the Pending Invoice Item Interval field. For example, Interval = Month and Interval Count = 3 bills every 3 months. Maximum of one year interval allowed (1 year, 12 months, or 52 weeks).</description>
    <inlineHelpText>The number of intervals between invoices. Works with the Pending Invoice Item Interval field. For example, Interval = Month and Interval Count = 3 bills every 3 months. Maximum of one year interval allowed (1 year, 12 months, or 52 weeks).</inlineHelpText>
    <label>Pending Invoice Item Interval Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>