unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Plan__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Plan associated with this Subscription. Only set if the Subscription is using a single Plan.</description>
    <inlineHelpText>The Plan associated with this Subscription. Only set if the Subscription is using a single Plan.</inlineHelpText>
    <label>Price</label>
    <referenceTo>bt_stripe__Plan2__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>