unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Proration_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Proration_Date__c</fullName>
    <description>If set, the proration will be calculated as though the Subscription was updated at the given time. This can be used to apply exactly the same proration that was previewed with the upcoming invoice endpoint. It can also be used to implement custom proration logic, such as prorating by day instead of by second, by providing the time that you wish to use for proration calculations.</description>
    <inlineHelpText>If set, the proration will be calculated as though the Subscription was updated at the given time.</inlineHelpText>
    <label>Proration Date</label>
    <type>DateTime</type>
</CustomField>