unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Quantity__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Quantity__c</fullName>
    <inlineHelpText>For example, if your plan is $10/user/month, and your customer has 5 users, you could pass 5 as the quantity to have the customer charged $50 (5 x $10) monthly. Only set if the Subscription contains a single Plan.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>