unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Start__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Start__c</fullName>
    <description>Date the most recent update to this subscription started.</description>
    <inlineHelpText>Date the most recent update to this subscription started.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>