unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Status__c</fullName>
    <description>See documentation for details.</description>
    <inlineHelpText>See documentation for details.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trialing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>past_due</fullName>
                <label>Past Due</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>