unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Stripe_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_URL__c</fullName>
    <formula>IF(bt_stripe__Customer__r.bt_stripe__Payment_Gateway__r.bt_stripe__Test_Mode__c ,HYPERLINK(&#39;https://dashboard.stripe.com/test/subscriptions/&#39;+bt_stripe__Subscription_ID__c,&#39;View&#39;),HYPERLINK(&#39;https://dashboard.stripe.com/subscriptions/&#39;+bt_stripe__Subscription_ID__c,&#39;View&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The URL for the record in Stripe.</inlineHelpText>
    <label>Stripe URL</label>
    <type>Text</type>
</CustomField>