unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription_ID__c</fullName>
    <description>The ID of this Subscription from the Payment Gateway.</description>
    <inlineHelpText>The ID of this Subscription from the Payment Gateway.</inlineHelpText>
    <label>Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>