unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription_Name__c</fullName>
    <label>Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>