unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Tax_Percent__c</fullName>
    <description>If provided, each invoice created by this subscription will apply the tax rate, increasing the amount billed to the customer.</description>
    <inlineHelpText>If provided, each invoice created by this subscription will apply the tax rate, increasing the amount billed to the customer.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>