unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Trial_End__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Trial_End__c</fullName>
    <description>If the Subscription has a trial, the end of that trial.</description>
    <inlineHelpText>If the Subscription has a trial, the end of that trial.</inlineHelpText>
    <label>Trial End</label>
    <type>DateTime</type>
</CustomField>