unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Trial_From_Plan__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Trial_From_Plan__c</fullName>
    <description>Indicates if a Plan&#39;s trial period days should be applied to the Subscription. Setting this flag to true together with Trial End is not allowed.</description>
    <inlineHelpText>Indicates if a Plan&#39;s trial period days should be applied to the Subscription. Setting this flag to true together with Trial End is not allowed.</inlineHelpText>
    <label>Trial From Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>