unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Upcoming_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Upcoming_Invoice_Amount__c</fullName>
    <description>Next invoice amount. Not to be manually updated.</description>
    <inlineHelpText>Next invoice amount. Not to be manually updated.</inlineHelpText>
    <label>Upcoming Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>