unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Upcoming_MRR__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Upcoming_MRR__c</fullName>
    <description>Monthly revenue.</description>
    <inlineHelpText>The total amount of Draft or Sent monthly recurring subscription invoices.</inlineHelpText>
    <label>Upcoming MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>