unpackaged/main/default/objects/bt_stripe__Subscription2__c/fields/bt_stripe__Upcoming_QRR__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Upcoming_QRR__c</fullName>
    <description>Quaterly revenue.</description>
    <inlineHelpText>The total amount of Draft or Sent &#39;every 3 month&#39; billing subscription invoices.</inlineHelpText>
    <label>Upcoming QRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>