unpackaged/main/default/objects/bt_stripe__Subscription2__c/recordTypes/bt_stripe__Subscription.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Subscription</fullName>
    <active>true</active>
    <description>Create a Subscription in Stripe</description>
    <label>Subscription</label>
</RecordType>