unpackaged/main/default/objects/bt_stripe__Subscription2__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Subscription_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>